--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-inject": "^4.1.0",
-    "mongojs": "^2.4.0"
+    "mongojs": "^2.4.0",
+    "req-timeout": "^1.0.2"
   }
 }
