--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-animate": "^1.5.7",
     "font-awesome": "^4.6.3",
     "font-awesome-animation": "^0.0.9",
-    "ngstorage": "^0.3.10"
+    "ngstorage": "^0.3.10",
+    "angular-sanitize": "^1.5.8"
   }
 }
